style.css
/* ... */
  /* ========================{ Media Queries }======================================= */
  
    /* PHONES */
  
    @media screen and (max-width: 992px) {
    
  .allDivs {
    background-image: url(assets/GTT_webBG_mobile.jpg);
    background-size: fill;
    background-position: top center;
    /* width: 100%; */
    /* background-size: cover; */
    }
      

      .titleText {
        font-size: 15vw;
        color: rgb(228, 236, 109);
        margin: 20% 0 5% 0;
        align-content: center;
        text-align: center;
      }
      .titleText1 {
        font-size: 15vw;
        color: rgb(228, 236, 109);
        margin: 45% 0 0 0;
        align-content: center;
        text-align: center;
      }
      .titleText2 {
        font-size: 15vw;
        color: rgb(228, 236, 109);
        margin: 5% 0 5% 0;
        align-content: center;
        text-align: center;
      }
      .titleText3 {
        font-size: 15vw;
        color: rgb(228, 236, 109);
        margin: 0 0 10% 0;
        align-content: center;
        text-align: center;
      }


.titleLogo {
    margin: 40% auto 5% auto;
    text-align: center;
    
  }
  .titleLogoIMG {
    width:40%;
  }

  .subtitleText {
    font-size: 4vw;
    color: rgb(224, 235, 78);
    
    margin: auto auto 30% auto;
    text-align: center;

    font-family: acier-bat-solid, sans-serif;
    font-weight: 400;
    font-style: normal;
  }

  

  .subtitleArrow{
    display: none;
  }



  .buzzPlayer {
    margin: 10% 3%;
    
  }

  .linkCity {
    text-align: center;
    align-content: center;
    margin: 10% auto;
    /* width: 20%; */
  }
  .topLogos {
    text-align: center;
    align-content: center;
    margin: 5% auto;
    width: 30%;

  }

  .topLinks {
    
  }

  .podDescription {
    font-size: 4vw;
    margin: auto 3%;
  }

  .contact {
    font-size: 5.5vw;
  }


  .enneagramHref {
    font-size: 5vw;
    text-decoration: none;
    color: rgb(202, 162, 77);
  }
  .enneagramHref:hover {
    font-size: 5vw;
    text-decoration: none;
    /* color: rgb(202, 162, 77); */
  }



  .logFallHref {
    font-size: 5vw;
    text-decoration: none;
    color: rgb(202, 162, 77);
  }
  .logFallHref:hover {
    font-size: 5vw;
    text-decoration: none;
    /* color: rgb(202, 162, 77); */
  }



  .cogBiasHref {
    font-size: 5vw;
    text-decoration: none;
    color: rgb(202, 162, 77);
  }
  .cogBiasHref:hover {
    font-size: 5vw;
    text-decoration: none;
    /* color: rgb(202, 162, 77); */
  }


  .goodtoself-image {
    margin: 10% auto 0 auto;
  }

.goodtoself-description {
  font-size: 4vw;
    margin: 10% auto 22% auto;
    padding: 0 5%;

}


  .podcasterTextTitle {
    margin: 7% auto;
      /* padding: 10% 3%; */
      margin: 20% 10% 2% 10%;
      font-size: 5vw;
      color: rgb(65, 150, 172);

  }
  .podcasterText {
    margin: 2% 10% 20% 10%;
    color: rgb(65, 150, 172);
    font-size: 4vw;
  }


  .podcaster1 {
    /* margin: auto 0; */
    width: 100%;
  }
  .podcaster2 {
    width: 80%;
  }

  .letsTalk {
    font-size: 20vw;
  }

  .footer {
    height: 50%;
    
    align-content: center;
    text-align: center;
  
  }

  .footerLinks {
    align-content: center;
    text-align: center;
  }
  .footerLinksHref {
    align-content: center;
    text-align: center;
  }

  .linkLogos {
    width: 10%;
    align-content: center;
    text-align: center;
    margin: 10% 2%;
  }

  .copyright {
  font-size: 3vw;
  }


/* ========================{ ENNEAGRAM MQ's }======================================= */


  .enneagramSubtitleText {
    font-size: 4vw;
    color: rgb(224, 235, 78);
    
    margin: 40% auto 5% auto;
    text-align: center;

    font-family: acier-bat-solid, sans-serif;
    font-weight: 400;
    font-style: normal;
  }

  .enneagramTitleText2 {
    font-size: 15vw;
    color: rgb(228, 236, 109);
    margin: 5% 0 30% 0;
    align-content: center;
    text-align: center;
  }

  .enneagramImageDiv {
    align-content: center;
    text-align: center;
    
  
  }
  .enneagramImage {
    align-content: center;
    text-align: center;
    border-radius: 25px;
    width: 90%;
    margin: 3% auto 10% auto;
  
  }

  .enneagramSeasonTitles {

    font-size: 4vw;
   
  }

  .enneagramTestText {
    align-content: center;
    text-align: center;
    margin: 3% 5% 10% 5%;
    padding: 5%;
    border-radius: 25px;
    border-style: double;
    text-decoration: none;
    font-size: 4vw;
    color: rgb(202, 162, 77)
    /* transition: padding .3s; */
    /* transition: font-size .3s; */
  
  }
  .enneagramTestText:hover {
    /* padding: 5.5%; */
    /* font-size: 1.1vw; */
    /* font-weight: bold; */
    color: rgb(238, 194, 99)
  }
  
  .enneaSpan {
    font-weight: bold;
  }
  
  .enneagramTestLink {
    align-content: center;
    text-align: center;
    text-decoration: none;
    color: rgb(202, 162, 77);
    
  }
  .enneagramTestLink:hover {
    align-content: center;
    text-align: center;
    text-decoration: none;
    color: rgb(202, 162, 77);
    font-size: 1.2vw;
  }


  .enneaCenterCol {
    border-style: none;
  }


  .enneaExplanationsTitles {
    color: white;
    font-size: 4vw;
    font-weight: bold;
    text-align: center;
    margin: 0 0 3% 0
  }  
  .enneaExplanations {
    color: white;
    font-size: 3vw;
    padding: 3%;
    border-style: none none solid none;
    border-width: 1px;
    margin: 0 5%;
    /* text-align: center; */
  }
  
  .en1 {
    border-style: none;
    /* border-radius: 0px; */
  }


  .heart {
    background-color: rgba(255, 199, 208, 0.623);
    /* border-radius: 25px 25px 0 0; */
    margin: 0 5%;
  }
  .head {
    background-color: rgba(170, 252, 255, 0.623);
    margin: 0 5%;
  }
  .gut {
    background-color: rgba(233, 205, 255, 0.623);
    /* border-radius: 0 0 25px 25px; */
    margin: 0 5% 10% 5%;
  }
    

  .en1 {
    border-style: none;
    /* border-radius: 0 0 50px 50px; */
  }

 

/* ============================={ END OF MQ's }======================================= */
  }

